build/log/idf_py_stdout_output_233131
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tag_reader.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/tag_reader.c.obj 
/home/julien/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_MDNS_VERSION_NUMBER=\"1.8.0\" -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-2290-g94cfe394fe\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/julien/Documents/esp32IDF/hello_world/build/config -I/home/julien/Documents/esp32IDF/hello_world/main -I/home/julien/esp/esp-idf/components/newlib/platform_include -I/home/julien/esp/esp-idf/components/freertos/config/include -I/home/julien/esp/esp-idf/components/freertos/config/include/freertos -I/home/julien/esp/esp-idf/components/freertos/config/xtensa/include -I/home/julien/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/julien/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/julien/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/julien/esp/esp-idf/components/freertos/esp_additions/include -I/home/julien/esp/esp-idf/components/esp_hw_support/include -I/home/julien/esp/esp-idf/components/esp_hw_support/include/soc -I/home/julien/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/julien/esp/esp-idf/components/esp_hw_support/dma/include -I/home/julien/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/julien/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/julien/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/julien/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/julien/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/julien/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/julien/esp/esp-idf/components/heap/include -I/home/julien/esp/esp-idf/components/heap/tlsf -I/home/julien/esp/esp-idf/components/log/include -I/home/julien/esp/esp-idf/components/soc/include -I/home/julien/esp/esp-idf/components/soc/esp32 -I/home/julien/esp/esp-idf/components/soc/esp32/include -I/home/julien/esp/esp-idf/components/soc/esp32/register -I/home/julien/esp/esp-idf/components/hal/platform_port/include -I/home/julien/esp/esp-idf/components/hal/esp32/include -I/home/julien/esp/esp-idf/components/hal/include -I/home/julien/esp/esp-idf/components/esp_rom/include -I/home/julien/esp/esp-idf/components/esp_rom/esp32/include -I/home/julien/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/julien/esp/esp-idf/components/esp_rom/esp32 -I/home/julien/esp/esp-idf/components/esp_common/include -I/home/julien/esp/esp-idf/components/esp_system/include -I/home/julien/esp/esp-idf/components/esp_system/port/soc -I/home/julien/esp/esp-idf/components/esp_system/port/include/private -I/home/julien/esp/esp-idf/components/xtensa/esp32/include -I/home/julien/esp/esp-idf/components/xtensa/include -I/home/julien/esp/esp-idf/components/xtensa/deprecated_include -I/home/julien/esp/esp-idf/components/lwip/include -I/home/julien/esp/esp-idf/components/lwip/include/apps -I/home/julien/esp/esp-idf/components/lwip/include/apps/sntp -I/home/julien/esp/esp-idf/components/lwip/lwip/src/include -I/home/julien/esp/esp-idf/components/lwip/port/include -I/home/julien/esp/esp-idf/components/lwip/port/freertos/include -I/home/julien/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/julien/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/julien/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/julien/esp/esp-idf/components/driver/deprecated -I/home/julien/esp/esp-idf/components/driver/i2c/include -I/home/julien/esp/esp-idf/components/driver/touch_sensor/include -I/home/julien/esp/esp-idf/components/driver/twai/include -I/home/julien/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/julien/esp/esp-idf/components/esp_pm/include -I/home/julien/esp/esp-idf/components/esp_ringbuf/include -I/home/julien/esp/esp-idf/components/esp_driver_gpio/include -I/home/julien/esp/esp-idf/components/esp_driver_pcnt/include -I/home/julien/esp/esp-idf/components/esp_driver_gptimer/include -I/home/julien/esp/esp-idf/components/esp_driver_spi/include -I/home/julien/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/julien/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/julien/esp/esp-idf/components/esp_driver_i2s/include -I/home/julien/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/julien/esp/esp-idf/components/sdmmc/include -I/home/julien/esp/esp-idf/components/esp_driver_sdspi/include -I/home/julien/esp/esp-idf/components/esp_driver_sdio/include -I/home/julien/esp/esp-idf/components/esp_driver_dac/include -I/home/julien/esp/esp-idf/components/esp_driver_rmt/include -I/home/julien/esp/esp-idf/components/esp_driver_tsens/include -I/home/julien/esp/esp-idf/components/esp_driver_sdm/include -I/home/julien/esp/esp-idf/components/esp_driver_i2c/include -I/home/julien/esp/esp-idf/components/esp_driver_uart/include -I/home/julien/esp/esp-idf/components/vfs/include -I/home/julien/esp/esp-idf/components/esp_driver_ledc/include -I/home/julien/esp/esp-idf/components/esp_driver_parlio/include -I/home/julien/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/julien/Documents/esp32IDF/hello_world/components/esp32-wifi-manager/src -I/home/julien/esp/esp-idf/components/nvs_flash/include -I/home/julien/esp/esp-idf/components/esp_partition/include -I/home/julien/Documents/esp32IDF/hello_world/managed_components/espressif__mdns/include -I/home/julien/esp/esp-idf/components/console -I/home/julien/esp/esp-idf/components/esp_vfs_console/include -I/home/julien/esp/esp-idf/components/esp_netif/include -I/home/julien/esp/esp-idf/components/esp_event/include -I/home/julien/esp/esp-idf/components/wpa_supplicant/include -I/home/julien/esp/esp-idf/components/wpa_supplicant/port/include -I/home/julien/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/julien/esp/esp-idf/components/esp_http_server/include -I/home/julien/esp/esp-idf/components/http_parser -I/home/julien/esp/esp-idf/components/esp_wifi/include -I/home/julien/esp/esp-idf/components/esp_wifi/include/local -I/home/julien/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/julien/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/julien/esp/esp-idf/components/esp_phy/include -I/home/julien/esp/esp-idf/components/esp_phy/esp32/include -I/home/julien/Documents/esp32IDF/hello_world/components/esp_websocket_client/include -I/home/julien/esp/esp-idf/components/esp-tls -I/home/julien/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/julien/esp/esp-idf/components/mbedtls/port/include -I/home/julien/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/julien/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/julien/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/julien/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include -I/home/julien/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m -I/home/julien/esp/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -I/home/julien/esp/esp-idf/components/tcp_transport/include -I/home/julien/esp/esp-idf/components/esp_timer/include -I/home/julien/esp/esp-idf/components/fatfs/diskio -I/home/julien/esp/esp-idf/components/fatfs/src -I/home/julien/esp/esp-idf/components/fatfs/vfs -I/home/julien/esp/esp-idf/components/wear_levelling/include -I/home/julien/Documents/esp32IDF/hello_world/managed_components/abobija__rc522/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/julien/Documents/esp32IDF/hello_world=. -fmacro-prefix-map=/home/julien/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/tag_reader.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/tag_reader.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/tag_reader.c.obj -c /home/julien/Documents/esp32IDF/hello_world/main/tag_reader.c
/home/julien/Documents/esp32IDF/hello_world/main/tag_reader.c: In function 'on_picc_state_changed':
/home/julien/Documents/esp32IDF/hello_world/main/tag_reader.c:70:29: error: incompatible type for argument 2 of 'memcpy'
   70 |         memcpy(msg.uid, picc->uid, msg.uid_len);
      |                         ~~~~^~~~~
      |                             |
      |                             rc522_picc_uid_t
In file included from /home/julien/Documents/esp32IDF/hello_world/main/tag_reader.c:1:
/home/julien/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/string.h:31:36: note: expected 'const void * restrict' but argument is of type 'rc522_picc_uid_t'
   31 | void *   memcpy (void *__restrict, const void *__restrict, size_t);
      |                                    ^
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/julien/Documents/esp32IDF/hello_world/build/bootloader/esp-idf/esptool_py && /home/julien/.espressif/python_env/idf5.5_py3.10_env/bin/python /home/julien/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/julien/Documents/esp32IDF/hello_world/build/bootloader/bootloader.bin
Bootloader binary size 0x6650 bytes. 0x9b0 bytes (9%) free.
ninja: build stopped: subcommand failed.
